WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
315587
Ignore XCTest when logging WebKit1 usage
https://bugs.webkit.org/show_bug.cgi?id=315587
Summary
Ignore XCTest when logging WebKit1 usage
David Kilzer (:ddkilzer)
Reported
2026-05-26 12:16:19 PDT
Ignore XCTest when logging WebKit1 usage. XCTest can load a WebKit1 `WebView` when running tests against legacy code, so there's no need to log this.
Attachments
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2026-05-26 12:16:20 PDT
<
rdar://problem/177960094
>
David Kilzer (:ddkilzer)
Comment 2
2026-05-26 12:19:34 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/65699
EWS
Comment 3
2026-05-26 12:51:56 PDT
Committed
313911@main
(85c9f7b92ae9): <
https://commits.webkit.org/313911@main
> Reviewed commits have been landed. Closing PR #65699 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug