Ignore XCTest when logging WebKit1 usage <https://bugs.webkit.org/show_bug.cgi?id=315587> <rdar://177960094>

Reviewed by Zak Ridouh.

* Source/WTF/wtf/cocoa/RuntimeApplicationChecksCocoa.mm:
(WTF::CocoaApplication::shouldOSFaultLogForAppleApplicationUsingWebKit1):
- Disable WebKit1 logging for XCTest.

Canonical link: https://commits.webkit.org/313911@main